# GCJ

./: .dir-locals.el  .gitignore  Makefile  README.md  gcj.cabal  stack.yaml
src/gcj-app/: Main.hs
src/gcj-lib/: GCJ.hs  Lib.hs
src/gcj-lib/Y2008/Q/: A.hs  B.hs  C.hs
src/gcj-lib/Y2008/R1A/: A.hs  B.hs
src/gcj-lib/Y2017/Q/: A.hs  B.hs  C.hs  C.org  D.hs
src/gcj-lib/Y2017/R1A/: A.hs  B.hs  C.hs  D.hs
src/gcj-lib/Y2017/R1B/: A.hs  B.hs  C.hs  D.hs
