name: gcj
version: 0.1.0.0
build-type: Simple
license: BSD3
cabal-version: >=1.10

library
    hs-source-dirs: src/gcj-lib
    exposed-modules: Lib
    other-modules: GCJ
                 , Y2017.R1B.A
                 , Y2017.R1B.B
                 , Y2017.R1B.C
                 , Y2017.R1B.D
    ghc-options: -Wall -Werror
    build-depends: base
                 , protolude
                 , containers
                 , text
                 , split
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
                      , OverloadedStrings
                      , RecordWildCards
                      , LambdaCase

executable gcj
    hs-source-dirs: src/gcj-app
    main-is: Main.hs
    ghc-options: -threaded -rtsopts -with-rtsopts=-T -Wall -Werror
    build-depends: base
                 , ekg
                 , gcj
                 , protolude
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
                      , OverloadedStrings
